--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -17,6 +17,8 @@
 @import "component/checkbox";
 @import "component/pagination";
 @import "component/radio";
+@import "component/textfield";
+@import "component/search";
 @import "component/tab";
 
 hr {
