--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -12,6 +12,7 @@
 @import "logo";
 @import "footer";
 
+@import "component/message";
 @import "component/accordion";
 @import "component/button";
 @import "component/checkbox";
