--- a/assets/sass/component/_search.scss
+++ b/assets/sass/component/_search.scss
@@ -5,6 +5,7 @@
     >* {
         display: inline-block;
         vertical-align: middle;
+        color: $black;
         line-height: 1.3;
         background-color: transparent;
         border: 0;
