--- a/assets/sass/component/_button.scss
+++ b/assets/sass/component/_button.scss
@@ -18,6 +18,7 @@ a {
     text-align: center;
     overflow: hidden;
     z-index: 0;
+    cursor: pointer;
     > span {
         position: absolute;
         border-radius: 50%;
