--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -21,6 +21,8 @@
 @import "component/textfield";
 @import "component/search";
 @import "component/tab";
+@import "component/navbar";
+@import "component/tooltip";
 
 hr {
     height: 1px;
