--- a/assets/css/system.css
+++ b/assets/css/system.css
@@ -612,6 +612,16 @@ table tr + tr + tr td {
   border-top: 1px solid #EEEEEE;
 }
 
+.col-type {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .bg-background img {
   max-width: 100%;
 }
