--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -3916,6 +3916,122 @@ input[type*='number']::-webkit-outer-spin-button {
   opacity: 0;
 }
 
+.form__group {
+  position: relative;
+}
+
+.form__group > * {
+  display: block;
+}
+
+.form__group.form__group--hasicon .form__group__input {
+  padding-right: 50px;
+}
+
+.form__group.form__group--error .form__group__placeholder,
+.form__group.form__group--error .form__group__icon {
+  color: #D60C18;
+}
+
+.form__group.form__group--error .form__group__input {
+  border-color: #D60C18;
+}
+
+.form__group .label {
+  position: relative;
+  display: block;
+}
+
+.form__group .label.helper__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form__group .label.helper__group .form__group__input {
+  width: 100%;
+}
+
+.form__group .label.helper__group .form__group__help {
+  padding-right: 20px;
+  max-width: calc(100% - 40px);
+}
+
+.form__group .label.helper__group .form__group__counter {
+  padding-left: 0;
+}
+
+.form__group__placeholder {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  color: #48545D;
+  font-size: 0.875rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.form__group__input {
+  min-width: 144px;
+  width: 100%;
+  color: #171717;
+  font-size: 1rem;
+  border-style: solid;
+  border-color: #939EA7;
+}
+
+.form__group__input:focus {
+  border-color: #003a9f;
+}
+
+.form__group__help,
+.form__group__counter {
+  display: block;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 5px;
+  color: #48545D;
+  font-size: 0.75rem;
+  font-style: normal;
+  line-height: 1.125;
+}
+
+.form__group__help--highlight {
+  color: #D60C18;
+}
+
+.form__group__counter {
+  text-align: right;
+}
+
+.form__group__icon {
+  position: absolute;
+  top: 1.25rem;
+  right: 15px;
+  font-size: 1.125rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.form__group--filled .form__group__input {
+  padding: 1.5rem 15px 0.375rem;
+  background-color: #EEEEEE;
+  border-width: 0px 0px 1px;
+}
+
+.form__group--filled .form__group__input:focus + .form__group__placeholder {
+  top: 0.2em;
+}
+
+.form__group--filled .form__group--defalt:hover .form__group__placeholder, .form__group--filled .form__group--defalt.hasValue .form__group__placeholder {
+  top: 0.2em;
+}
+
 .search__group {
   position: relative;
   min-width: 240px;
@@ -4000,8 +4116,6 @@ input[type*='number']::-webkit-outer-spin-button {
 
 .tab .tab__nav {
   margin-bottom: -1px;
-  border: solid #D3D5D7;
-  border-width: 1px 1px 0;
   overflow: hidden;
 }
 
