--- a/assets/sass/component/_tab.scss
+++ b/assets/sass/component/_tab.scss
@@ -2,8 +2,8 @@
   position: relative;
   .tab__nav {
     margin-bottom: -1px;
-    border: solid $gray-200;
-    border-width: 1px 1px 0;
+    // border: solid $gray-200;
+    // border-width: 1px 1px 0;
     overflow: hidden;
     ul {
       @include list(0, 0, none);
