--- a/assets/sass/component/_textfield.scss
+++ b/assets/sass/component/_textfield.scss
@@ -14,3 +14,107 @@ input[type*='number']::-webkit-inner-spin-button,
 input[type*='number']::-webkit-outer-spin-button {
     opacity: 0;
 }
+
+.form__group {
+	position: relative;
+	> * {
+		display: block;
+	}
+	&.form__group--hasicon {
+		.form__group__input {
+			padding-right: 50px;
+		}
+	}
+	&.form__group--error {
+		.form__group__placeholder,
+		.form__group__icon {
+			color: $primary;
+		}
+		.form__group__input {
+			border-color: $primary;
+		}
+	}
+	.label {
+		position: relative;
+		display: block;
+		&.helper__group {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			.form__group__input {
+				width: 100%;
+			}
+			.form__group__help {
+				padding-right: 20px;
+				max-width: calc(100% - 40px);
+			}
+			.form__group__counter {
+				padding-left: 0;
+			}
+		}
+	}
+}
+.form__group__placeholder {
+	position: absolute;
+	top: 15px;
+	left: 15px;
+    color: $secondary-variant;
+	font-size: $h5;
+	transition: all 0.3s;
+}
+.form__group__input {
+	min-width: 144px;
+	width: 100%;
+	color: $black;
+	font-size: $h4;
+	border-style: solid;
+	border-color: $secondary;
+	&:focus {
+		border-color: $surface;
+	}
+}
+.form__group__help,
+.form__group__counter {
+    display: block;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 5px;
+    color: $secondary-variant;
+    font-size: $h6;
+    font-style: normal;
+    line-height: 1.125;
+}
+.form__group__help--highlight {
+	color: $primary;
+}
+.form__group__counter {
+	text-align: right;
+}
+.form__group__icon {
+	position: absolute;
+    top: 1.25rem;
+    right: 15px;
+    font-size: $h3;
+    transition: all 0.3s;
+}
+
+.form__group--filled {
+	.form__group__input {
+		padding: 1.5rem 15px 0.375rem;
+		background-color: $gray-100;
+		border-width: 0px 0px 1px;
+		&:focus {
+			+ .form__group__placeholder {
+				top: 0.2em;
+			}
+		}
+	}
+	.form__group--defalt {
+		&:hover,
+		&.hasValue {
+			.form__group__placeholder {
+				top: 0.2em;
+			}
+		}
+	}
+}
