outlined + type + select

--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -19,6 +19,7 @@
 @import "component/pagination";
 @import "component/radio";
 @import "component/textfield";
+@import "component/select";
 @import "component/search";
 @import "component/tab";
 @import "component/navbar";
