--- a/assets/sass/system.scss
+++ b/assets/sass/system.scss
@@ -225,6 +225,7 @@ table {
   border-collapse: collapse;
   th, td {
     padding: 12px;
+    vertical-align: top;
     &:first-child {
       padding-left: 20px;
       padding-right: 20px;
