--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -3930,11 +3930,11 @@ input[type*='number']::-webkit-outer-spin-button {
 
 .form__group.form__group--error .form__group__placeholder,
 .form__group.form__group--error .form__group__icon {
-  color: #D60C18;
+  color: #D60C18 !important;
 }
 
 .form__group.form__group--error .form__group__input {
-  border-color: #D60C18;
+  border-color: #D60C18 !important;
 }
 
 .form__group .label {
@@ -3959,11 +3959,26 @@ input[type*='number']::-webkit-outer-spin-button {
 
 .form__group .label.helper__group .form__group__help {
   padding-right: 20px;
-  max-width: calc(100% - 40px);
+  max-width: calc(100% - 45px);
 }
 
 .form__group .label.helper__group .form__group__counter {
   padding-left: 0;
+}
+
+.form__group .label.form__group--disabled > * {
+  cursor: not-allowed;
+}
+
+.form__group .label.form__group--disabled .form__group__placeholder {
+  top: 15px !important;
+  left: 15px !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  color: #D3D5D7 !important;
+  font-size: 1rem !important;
+  -webkit-transform: translateY(0) !important;
+          transform: translateY(0) !important;
 }
 
 .form__group__placeholder {
@@ -3971,13 +3986,13 @@ input[type*='number']::-webkit-outer-spin-button {
   top: 15px;
   left: 15px;
   color: #48545D;
-  font-size: 0.875rem;
+  font-size: 1rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .form__group__input {
-  min-width: 144px;
+  min-width: 230px;
   width: 100%;
   color: #171717;
   font-size: 1rem;
@@ -3996,7 +4011,7 @@ input[type*='number']::-webkit-outer-spin-button {
   padding-right: 15px;
   margin-top: 5px;
   color: #48545D;
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   font-style: normal;
   line-height: 1.125;
 }
@@ -4011,7 +4026,6 @@ input[type*='number']::-webkit-outer-spin-button {
 
 .form__group__icon {
   position: absolute;
-  top: 1.25rem;
   right: 15px;
   font-size: 1.125rem;
   -webkit-transition: all 0.3s;
@@ -4019,17 +4033,116 @@ input[type*='number']::-webkit-outer-spin-button {
 }
 
 .form__group--filled .form__group__input {
-  padding: 1.5rem 15px 0.375rem;
+  padding: 1.538rem 15px 0.375rem;
   background-color: #EEEEEE;
   border-width: 0px 0px 1px;
 }
 
 .form__group--filled .form__group__input:focus + .form__group__placeholder {
   top: 0.2em;
+  color: #003a9f;
+  font-size: 0.875rem;
 }
 
-.form__group--filled .form__group--defalt:hover .form__group__placeholder, .form__group--filled .form__group--defalt.hasValue .form__group__placeholder {
+.form__group--filled .form__group__icon {
+  top: 1.25rem;
+}
+
+.form__group--filled .form__group--default:hover .form__group__placeholder, .form__group--filled .form__group--default.hasValue .form__group__placeholder {
   top: 0.2em;
+  color: #003a9f;
+  font-size: 0.875rem;
+}
+
+.form__group--filled .form__group--default.form__group--disabled .form__group__placeholder {
+  top: 15px;
+  left: 15px;
+  color: #D3D5D7;
+  font-size: 1rem;
+}
+
+.form__group--filled .form__group--default.form__group--disabled .form__group__input {
+  border-bottom-color: transparent;
+}
+
+.form__group--outlined .form__group__input {
+  padding: 1rem 1rem 0.8125rem;
+  background-color: transparent;
+  border-width: 1px;
+}
+
+.form__group--outlined .form__group__input:focus {
+  border-color: #003a9f;
+}
+
+.form__group--outlined .form__group__input:focus + .form__group__placeholder {
+  top: 0;
+  padding-left: 1px;
+  padding-right: 1px;
+  color: #003a9f;
+  font-size: 0.75rem;
+  background-color: #ffffff;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.form__group--outlined .form__group__icon {
+  top: 1.125rem;
+}
+
+.form__group--outlined .form__group--default:hover .form__group__placeholder, .form__group--outlined .form__group--default.hasValue .form__group__placeholder {
+  top: 0;
+  padding-left: 1px;
+  padding-right: 1px;
+  font-size: 0.75rem;
+  color: #003a9f;
+  background-color: #ffffff;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.form__group--outlined .form__group--default.form__group--disabled .form__group__input {
+  border-color: #D3D5D7;
+}
+
+.select__group select {
+  min-width: 140px;
+  padding: 1rem 2rem 1rem 1rem;
+  font-weight: inherit;
+  line-height: 1;
+  border: 1px solid;
+  background-size: 0.78125rem;
+  background-position: calc(100% - 0.78125rem) center;
+  background-repeat: no-repeat;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.select__group--filled.select__group select {
+  background-color: #EEEEEE;
+  background-image: url(../images/common/down.svg);
+  border-color: #EEEEEE;
+}
+
+.select__group--outlined.select__group select {
+  color: #48545D;
+  background-color: transparent;
+  background-image: url(../images/common/down.svg);
+  border-color: #939EA7;
+}
+
+.select__group select:hover, .select__group select:focus {
+  color: #003a9f;
+}
+
+.select__group select:disabled {
+  color: #D3D5D7;
+  background-image: url(../images/common/down--disable.svg);
+  border-color: #EEEEEE;
+}
+
+.select__group--error.select__group select {
+  color: #D60C18;
 }
 
 .search__group {
