--- a/assets/sass/component/_textfield.scss
+++ b/assets/sass/component/_textfield.scss
@@ -28,10 +28,10 @@ input[type*='number']::-webkit-outer-spin-button {
 	&.form__group--error {
 		.form__group__placeholder,
 		.form__group__icon {
-			color: $primary;
+			color: $primary !important;
 		}
 		.form__group__input {
-			border-color: $primary;
+			border-color: $primary !important;
 		}
 	}
 	.label {
@@ -46,10 +46,24 @@ input[type*='number']::-webkit-outer-spin-button {
 			}
 			.form__group__help {
 				padding-right: 20px;
-				max-width: calc(100% - 40px);
+				max-width: calc(100% - 45px);
 			}
 			.form__group__counter {
 				padding-left: 0;
+			}
+		}
+		&.form__group--disabled {
+			> * {
+				cursor: not-allowed;
+			}
+			.form__group__placeholder {
+				top: 15px !important;
+				left: 15px !important;
+				padding-left: 0 !important;
+				padding-right: 0 !important;
+				color: $gray-200 !important;
+				font-size: $h4 !important;
+				transform: translateY(0) !important;
 			}
 		}
 	}
@@ -58,12 +72,12 @@ input[type*='number']::-webkit-outer-spin-button {
 	position: absolute;
 	top: 15px;
 	left: 15px;
-    color: $secondary-variant;
-	font-size: $h5;
+	color: $secondary-variant;
+	font-size: $h4;
 	transition: all 0.3s;
 }
 .form__group__input {
-	min-width: 144px;
+	min-width: 230px;
 	width: 100%;
 	color: $black;
 	font-size: $h4;
@@ -80,7 +94,7 @@ input[type*='number']::-webkit-outer-spin-button {
     padding-right: 15px;
     margin-top: 5px;
     color: $secondary-variant;
-    font-size: $h6;
+    font-size: $h5;
     font-style: normal;
     line-height: 1.125;
 }
@@ -92,7 +106,7 @@ input[type*='number']::-webkit-outer-spin-button {
 }
 .form__group__icon {
 	position: absolute;
-    top: 1.25rem;
+    // top: 1rem;
     right: 15px;
     font-size: $h3;
     transition: all 0.3s;
@@ -100,20 +114,85 @@ input[type*='number']::-webkit-outer-spin-button {
 
 .form__group--filled {
 	.form__group__input {
-		padding: 1.5rem 15px 0.375rem;
+		padding: 1.538rem 15px 0.375rem;
 		background-color: $gray-100;
 		border-width: 0px 0px 1px;
 		&:focus {
 			+ .form__group__placeholder {
 				top: 0.2em;
+				color: $surface;
+				font-size: $h5;
 			}
 		}
 	}
-	.form__group--defalt {
+	.form__group__icon {
+		top: 1.25rem;
+	}
+	.form__group--default {
 		&:hover,
 		&.hasValue {
 			.form__group__placeholder {
 				top: 0.2em;
+				color: $surface;
+				font-size: $h5;
+			}
+		}
+		&.hasValue {
+			.form__group__icon {
+				// top: 1.5rem;
+			}
+		}
+		&.form__group--disabled {
+			.form__group__placeholder {
+				top: 15px;
+				left: 15px;
+				color: $gray-200;
+				font-size: $h4;
+			}
+			.form__group__input {
+				border-bottom-color: transparent;
+			}
+		}
+	}
+}
+
+.form__group--outlined {
+	.form__group__input {
+		padding: 1rem 1rem 0.8125rem;
+		background-color: transparent;
+		border-width: 1px;
+		&:focus {
+			border-color: $surface;
+			+ .form__group__placeholder {
+				top: 0;
+				padding-left: 1px;
+				padding-right: 1px;
+				color: $surface;
+				font-size: $h6;
+				background-color: $white;
+				transform: translateY(-50%);
+			}
+		}
+	}
+	.form__group__icon {
+		top: 1.125rem;
+	}
+	.form__group--default {
+		&:hover,
+		&.hasValue {
+			.form__group__placeholder {
+				top: 0;
+				padding-left: 1px;
+				padding-right: 1px;
+				font-size: $h6;
+				color: $surface;
+				background-color: $white;
+				transform: translateY(-50%);
+			}
+		}
+		&.form__group--disabled {
+			.form__group__input {
+				border-color: $gray-200;
 			}
 		}
 	}
