--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -25,6 +25,10 @@ $h-m-size: $h1-m, $h2-m, $h3-m, $h4-m, $h5-m, $h6-m;
     }
 }
 
+strong, b {
+    @extend %typo-weight;
+}
+
 @for $i from 1 through 6 {
     h#{$i} {
         @extend %typo-weight;
