--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -11,12 +11,12 @@ h1,
   margin-bottom: 1em;
 }
 
-h1, h2, h3, h4, h5, h6 {
+strong, b, h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
 }
 
 @media (min-width: 768px) {
-  h1, h2, h3, h4, h5, h6 {
+  strong, b, h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
   }
 }
