--- a/assets/sass/system.scss
+++ b/assets/sass/system.scss
@@ -412,16 +412,38 @@ section, .bg-background {
   }
 }
 
+.row-icons {
+  .col-auto {
+    width: calc(100% / 4);
+    margin-bottom: 30px;
+    @media screen and (min-width: 360px) {
+      width: calc(100% / 5);
+    }
+    @include media-breakpoint-up(sm) {
+      width: calc(100% / 7);
+    }
+    @include media-breakpoint-up(md) {
+      width: calc(100% / 11);
+    }
+    i.icon {
+      display: block;
+    }
+  }
+}
+
 .download__group {
   .item__image {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 15px;
-    min-height: 150px;
+    height: 150px;
     margin-bottom: 20px;
     img {
       max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
     }
   }
   .download__item {
