--- a/assets/sass/system.scss
+++ b/assets/sass/system.scss
@@ -44,7 +44,7 @@ main {
         .col-md-6 a {
           position: relative;
           img {
-            width: calc(100% - 80px);
+            max-width: calc(100% - 80px);
           }
           img.hover {
             position: absolute;
@@ -78,6 +78,9 @@ main {
         }
         > section {
           @include media-breakpoint-up(md) {
+            padding-left: 40px;
+          }
+          @include media-breakpoint-up(lg) {
             padding-left: 100px;
           }
           &:first-child {
